make factory for monsters